<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OpcionesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etValor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lbl_valor_1"
            android:inputType="text" />

        <EditText
            android:id="@+id/etValor2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lbl_valor_2"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnIf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_if" />

    <Button
        android:id="@+id/btnFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_for" />

    <Button
        android:id="@+id/btnWhen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_when" />
</LinearLayout>