<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_nombre"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genero" />

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_mostrar" />

        <Button
            android:id="@+id/btnOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_opciones" />
    </LinearLayout>

</FrameLayout>